--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,11 @@
+body
+{
+    background-color: grey;
+}
+
+
+
+
 div
 {
     border-radius:6px;
@@ -9,7 +17,7 @@ div
 #header
 {
     
-    
+    border:50px solid green;
     width:160px;
 }
 .left
@@ -20,6 +28,7 @@ margin-left:20px;
     height:180px;
     width:189px;
     background-color:yellow;
+    border:20px solid blue;
 }
 .right
 {
@@ -28,10 +37,22 @@ margin-left:20px;
     width:400px;
     height:200px;
     background-color:pink;
+    border:20px solid orange;
     
 }
 #footer
 {
+    border:20px solid brown;
     clear:both;
     width:300px
+    
+    
+}
+.pic
+{
+    position:relative;
+    margin-left: 400px;
+    margin-bottom: 200px;
+    
+
 }
